add frontmatter support, QoL updates, remove pycache

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </header>
         <div class="divider"></div>
         <h2>About me</h2>
-        <p>I'm studying computer engineering at <a href="https://www.tuwien.at/en/">TU Wien</a> and work at <a href="https://bouncyrock.com/">Bouncyrock Entertainment</a> on <a href="https://store.steampowered.com/app/720620/TaleSpire/">TaleSpire</a>.<br>In my free time I am part of the liquid rocketry project of <a href="https://spaceteam.at">TU Wien Space Team</a> and I try to contribute to <a href="https://plasma-mobile.org/">KDE Plasma Mobile</a>.
+        <p>Hello there, stranger! My name is Luis and I'm studying computer engineering at <a href="https://www.tuwien.at/en/">TU Wien</a> and work at <a href="https://bouncyrock.com/">Bouncyrock Entertainment</a> on <a href="https://store.steampowered.com/app/720620/TaleSpire/">TaleSpire</a>.<br>In my free time I am part of the liquid rocketry project of <a href="https://spaceteam.at">TU Wien Space Team</a> and I try to contribute to <a href="https://plasma-mobile.org/">KDE Plasma Mobile</a>.
         </p>
         <h2>You can find me at</h2>
         <ul>
