--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
         <h2>Blog Posts</h2>
         <ul>
-            <li>2024-04-25: <a href="blog/nav_gestures.html">Revamp Plasma Mobile Navigation Gestures</a></li>
+            <li>2024-04-25: <a href="blog/nav_gestures.html">Revamping Plasma Mobile Navigation Gestures</a></li>
         </ul>
         <footer>Luis / <code>lprod</code> 2024</footer>
     </body>
