--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <h2>Blog Posts</h2>
         <ul>
             <li>2024-05-05: <a href="blog/plasmo_nav_gestures.html">Revamping Plasma Mobile Navigation Gestures</a></li>
+            <li>2024-07-28: <a href="blog/monthly_2024_07.html">What I did in KDE/Plasma Mobile land in July-ish</a></li>
         </ul>
         <footer>Luis / <code>lprod</code> 2024</footer>
     </body>
