write new blog post

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <ul>
             <li>2024-05-05: <a href="blog/plasmo_nav_gestures.html">Revamping Plasma Mobile Navigation Gestures</a></li>
             <li>2024-07-28: <a href="blog/monthly_2024_07.html">What I did in KDE/Plasma Mobile land in July-ish</a></li>
+            <li>2025-01-04: <a href="blog/monthly_2025_01.html">My last 6 months in KDE/Plasma Mobile</a></li>
         </ul>
-        <footer>Luis / <code>lprod</code> 2024</footer>
+        <footer>Luis / <code>lprod</code> 2025</footer>
     </body>
 </html>
